--- a/DesktopDance.csproj
+++ b/DesktopDance.csproj
@@ -2,11 +2,28 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>Resources\blin4iikIco.ico</ApplicationIcon>
+    
+    <!-- Self-contained deployment настройки для plug and play -->
+    <SelfContained>true</SelfContained>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <PublishSingleFile>true</PublishSingleFile>
+    <PublishReadyToRun>true</PublishReadyToRun>
+    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+    <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
+    
+    <!-- Информация о приложении -->
+    <Version>2.0.0</Version>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
+    <Company>Desktop Dance</Company>
+    <Product>Desktop Dance</Product>
+    <Copyright>© 2024 Desktop Dance</Copyright>
+    <Description>Анимированные персонажи на вашем рабочем столе!</Description>
   </PropertyGroup>
 
   <ItemGroup>
